--- a/ui/create.ui
+++ b/ui/create.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Wed Oct  2 10:09:09 2013 -->
+<!-- Generated with glade 3.16.0 on Wed Oct  2 12:11:37 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
@@ -23,6 +23,8 @@
     <property name="stock">gtk-new</property>
   </object>
   <object class="GtkWindow" id="vmm-create">
+    <property name="width_request">400</property>
+    <property name="height_request">400</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">New VM</property>
     <property name="resizable">False</property>
@@ -429,6 +431,7 @@
                               <object class="GtkAlignment" id="alignment13">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="top_padding">8</property>
                                 <property name="left_padding">15</property>
                                 <child>
                                   <object class="GtkGrid" id="table6">
